--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,9 +7,11 @@ import { SITE_TITLE } from '../consts';
 	<nav>
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href="/">Inicio</HeaderLink>
+			<HeaderLink href="/about">Acerca de</HeaderLink>
+			<HeaderLink href="/service">Servicios</HeaderLink>
+			<HeaderLink href="/blog">Proyectos</HeaderLink>
+			<HeaderLink href="/contact">Contacto</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://m.webtoo.ls/@astro" target="_blank">
@@ -41,6 +43,41 @@ import { SITE_TITLE } from '../consts';
 			</a>
 		</div>
 	</nav>
+
+	
+  <!-- Background image -->
+  <div
+    id="intro-example"
+    class="p-5 text-center bg-image"
+    style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');"
+  >
+    <div class="mask" style="background-color: rgba(0, 0, 0, 0.5);">
+      <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="text-white">
+          <h1 class="mb-3">Learn Bootstrap 5 with MDB</h1>
+          <h5 class="mb-4">Best & free guide of responsive web design</h5>
+          <a
+            data-mdb-ripple-init
+            class="btn btn-outline-light btn-lg m-2"
+            href="https://www.youtube.com/watch?v=c9B4TPnak1A"
+            role="button"
+            rel="nofollow"
+            target="_blank"
+          >Start tutorial</a
+          >
+          <a
+            data-mdb-ripple-init
+            class="btn btn-outline-light btn-lg m-2"
+            href="https://mdbootstrap.com/docs/standard/"
+            target="_blank"
+            role="button"
+          >Download MDB UI KIT</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+
 </header>
 <style>
 	header {
