--- a/src/pages/service/index.astro
+++ b/src/pages/service/index.astro
@@ -4,12 +4,10 @@ import BaseHead from '../../components/BaseHead.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
-import { getCollection } from 'astro:content';
+
 import FormattedDate from '../../components/FormattedDate.astro';
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-);
+
 ---
 
 <!doctype html>
@@ -93,19 +91,18 @@ const posts = (await getCollection('blog')).sort(
 		<main>
 			<section>
 				<ul>
-					{
-						posts.map((post) => (
+
 							<li>
-								<a href={`/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
-									<h4 class="title">{post.data.title}</h4>
+							
+									<img width={720} height={360} src={} alt="" />
+									<h4 class="title">Titulo</h4>
 									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
+										
 									</p>
-								</a>
+								
 							</li>
-						))
-					}
+						
+					
 				</ul>
 			</section>
 		</main>
