ni idea hermano

--- a/src/components/CardService.astro
+++ b/src/components/CardService.astro
@@ -4,20 +4,23 @@ interface Props {
     img :string;
     title : string;
     parraf : string;
+	date : string;
     height :number;
     width:number;
 }
 
-const {img,title,parraf,height,width} = Astro.props
+const {img,date,title,parraf,height,width} = Astro.props
 ---
 
 <li>
 							
-<img width={width} height={height} src="si" alt="" />
-<h4 class="title">Titulo</h4>
+<img width={width} height={height} src={img} alt="Proyectos PrestaServis RL" />
+<h4 class="title">{title}</h4>
+<h6>{parraf}</h6>
 <p class="date">
-    
+    {date}
 </p>
+
 
 </li>
 
