--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,7 +3,9 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import 'bootstrap/dist/css/bootstrap.css'
+import ContactCards from '../components/ContactCards.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import FormContact from '../components/FormContact';
 ---
 
 <!doctype html>
@@ -45,6 +47,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 					>astro-blog-template
 				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
 			</p>
+
+			<ContactCards/>
+<br>
+<FormContact/>
 		</main>
 		<Footer />
 	</body>
