--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,59 +1,104 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import Card from '../components/Card.astro';
-import FormContact from '../components/FormContact';
-import Carousel from '../components/Carousel.astro';
-import 'bootstrap/dist/css/bootstrap.css'
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
-import Aliadosc from '../components/aliadosc.astro';
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import Card from "../components/Card.astro";
+import FormContact from "../components/FormContact";
+import Carousel from "../components/Carousel.astro";
+import "bootstrap/dist/css/bootstrap.css";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import Aliadosc from "../components/aliadosc.astro";
+import CardEM from "../components/CardEM.astro";
+import Organ from "../components/Organ.astro";
+import CardService from "../components/CardService.astro";
 ---
 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-	</head>
-	<body>
-		
-		<section>
-			<Header />
-			<Carousel/>
-		</section>
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <section>
+      <Header />
+      <Carousel />
+    </section>
 
-		<section id="#Servicios">
-			<Card title='Innovation in Refining' body='Explore our latest innovations in refining technology to improve the quality and performance of petroleum products....' href='si' img='Ilustración3.webp'/>
-		</section>
-		
-		<section id="#Projects">
-			
-		</section>
+    <section id="Servicios">
+      <h2 class="text-center">Servicios realizados por la empresa</h2>
 
-		<section id="#organization">
+	  <div class="container">
+		<CardService
+        date=""
+        img="https://picsum.photos/200"
+        parraf="hola"
+        height={350}
+        width={320}
+        title="hola"
+      />
+	  </div>
+      
+    </section>
 
-		</section>
+    <section id="Projects">
+      <h2 class="text-center">Proyectos realizados por la empresa</h2>
 
-		<section>
+	  <div class="container">
+		<CardService
+        date=""
+        img="https://picsum.photos/200"
+        parraf="hola"
+        height={350}
+        width={320}
+        title="hola"
+      />
+	  </div>
+      
+    </section>
 
-		</section>
+    <section id="organization">
+      <h2 class="text-center">Equipos de La Empresa</h2>
+	  <div class="container">
+		<CardEM 
+		title="hola" 
+		Data="sisas" 
+		img="https://picsum.photos/200" 
+		/>
+	  </div>
 
-		<section id=" aliadoscomerciales">
-			<Aliadosc/>
-		</section>
+    </section>
 
+    <Organ />
 
-		<main>
-			<section id="#contact">
-				<FormContact client:load/>
-			</section>
-		</main>
+    <section id=" aliadoscomerciales">
+      <Aliadosc />
+    </section>
 
-		<Footer />
+    <main>
+      <section id="contact">
+        <FormContact client:load />
+      </section>
+    </main>
 
-	</body>
+    <Footer />
+
+  </body>
 </html>
