--- a/src/components/ContactCards.astro
+++ b/src/components/ContactCards.astro
@@ -3,31 +3,31 @@
 
         <div class="col-md-4">
             <div class="card">
-                <h5 class="card-header">Featured</h5>
+                <h5 class="card-header">Departamento de Contrataciones</h5>
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Si deseas formar parte de nuestro equipo de trabajo contacte con nosotros y nos encargaremos de atenderte en la brevedad posible</h5>
+                  <p class="card-text">En PrestaServis estamos comprometidos con la Responsabilidad y deseamos que formes parte de nuestro equipo para seguir expandiendo nuestras capacidades</p>
+                  <a href="#" class="btn btn-primary">Click aqui para contactar con nosotros</a>
                 </div>
               </div>
         </div>
         <div class="col-md-4">
             <div class="card">
-                <h5 class="card-header">Featured</h5>
+                <h5 class="card-header">Departamento de Calidad</h5>
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Contactate directamente con nuestro equipo acargo del departamento de calidad</h5>
+                  <p class="card-text">Nuestro equipo esta conformado por expertos en la materia de gestion de la calidad con amplia experiencia dentro de la materia y una preparacion solida, para mas informacion contacte via e-mailcon nosotros</p>
+                  <a href="mailto:elcorreoquequieres@correo.com?Subject=Aquí%20el%20asunto%20del%20mail" class="btn btn-primary">Click aqui para contactar con nosotros</a>
                 </div>
               </div>
         </div>
         <div class="col-md-4">
             <div class="card">
-                <h5 class="card-header">Featured</h5>
+                <h5 class="card-header">Gerencia</h5>
                 <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Contacta directamente con la gerencia via e-mail, te recomendamos contactar directamente al departameento de tu interes</h5>
+                  <p class="card-text">Nuestra estructura departamental esta diseñada para atender a tus necesidades de forma eficaz, sera un placer poder contactarnos con usted.</p>
+                  <a href="#" class="btn btn-primary">click aqui para contactarnos</a>
                 </div>
               </div>
         </div>
