--- a/src/components/Organ.astro
+++ b/src/components/Organ.astro
@@ -2,45 +2,46 @@
     <div class="row">
       <div class="col-md-6 container-primeracolumna">
         <p class="text-center">
-          Discover how our passion for innovation and safety drives us to reach
-          new heights in every project we undertake.
+          Descubra cómo nuestra pasión por la innovación y la seguridad 
+          nos impulsa a alcanzar nuevas alturas en cada proyecto que emprendemos.
         </p>
-        <h4>We Break Limits</h4>
+        <h4>De mano de la Planificación y el control ofrecemos un servicio de Calidad</h4>
         <h4>Unlimited</h4>
         <p class="segundoP">
-          Discover how our passion for innovation and excellence drives us to push
-          the limits in every aspect of our operation. We are committed to
-          challenging convention and constantly seeking new ways to achieve
-          success. In everything we do, our dedication to quality and creativity
-          drives us to new heights. Join us on our journey into the limitless.!
+          En Prestaservis, nos enorgullece ofrecer no solo un equipo humano altamente experimentado y capacitado,
+           sino también áreas operacionales equipadas con maquinaria, dispositivos y equipos de primera calidad. 
+           Estas instalaciones de vanguardia nos permiten brindar servicios de la más alta calidad y cumplir con las expectativas de nuestros clientes 
+           de manera consistente.
         </p>
         <div class="row contenedor-items">
           <div class="col-md-4 contenedor-elemento">
             <div class="contenedor-img">
-              <img src="vehicle.svg" class="icon-footer" alt="" />
-              <p class="p-icon">Available vehicles</p>
+              <img src="public/maquina.png" class="icon-footer" alt="" />
+              <p class="p-icon">Equipos y Maquinarias Operativos a disposicion de la prestacion de servicios</p>
               <h5 class="counter" id="counter0"></h5>
             </div>
           </div>
           <div class="col-md-4 contenedor-elemento">
             <div class="contenedor-img">
-              <img src="building.svg" class="icon-footer" alt="" />
-              <p class="p-icon">Operational Areas</p>
+              <img src="public/areaoperac.png" class="icon-footer" alt="" />
+              <p class="p-icon">Areas Operacionales de Primera Calidad</p>
               <h5 class="counter" id="counter2"></h5>
             </div>
           </div>
           <div class="col-md-4 contenedor-elemento">
             <div class="contenedor-img">
-              <img src="helmet.svg" class="icon-footer" alt="" />
-              <p class="p-icon">Workers</p>
+              <img src="public/factory-male-worker-upper-body-svgrepo-com.svg" class="icon-footer" alt="" />
+              <p class="p-icon">Trabajadores Ampliamente experimentados</p>
               <h5 class="counter" id="counter3"></h5>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <img src="0303.webp" alt="" />
+
+      <div class="col-md-6" style="background-image: url('public/EQUIPOS DE LA EMPRESA(2).png'); background-repeat: repeat;">
       </div>
+      
+
     </div>
 </div>
   
@@ -69,7 +70,7 @@
     }
   
     .container-primeracolumna {
-      background-color: #00ccff;
+      background-color: #0000ff;
       margin: 0;
       padding: 0; /* Elimina el padding */
     }
