--- a/src/components/aliadosc.astro
+++ b/src/components/aliadosc.astro
@@ -1,19 +1,48 @@
 
 <section>
 
+    <h2 class="text-center">Referencias y Aliados Comerciales de Nuestra Organización</h2>
+    <br>
     <div class="contenedor-principal">
         <div class="container">
-            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/logos/microsoft.svg" alt="">
+            <img src="public/ALIADOS/INDUNORCA.png" alt="">
         </div>
         <div class="container">
-            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/logos/google.svg" alt="">
+            <img src="public/ALIADOS/ICM.png" alt="">
         </div>
         <div class="container">
-            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/logos/facebook.svg" alt="">
+            <img src="public/ALIADOS/GLOBAL.png" alt="">
         </div>
 
         <div class="container">
-            <img src="https://startbootstrap.github.io/startbootstrap-agency/assets/img/logos/ibm.svg" alt="">
+            <img src="public/ALIADOS/CETEL.png" alt="">
+        </div>
+        <div class="container">
+            <img src="public/ALIADOS/INELECTRA.png" alt="">
+        </div>
+        <div class="container">
+            <img src="public/ALIADOS/INSERVEN.png" alt="">
+        </div>
+        <div class="container">
+            <img src="public/ALIADOS/METOR.png" alt="">
+        </div>
+        <div class="container">
+            <img src="public/ALIADOS/MMO.png" alt="">
+        </div>
+        <div class="container">
+            <img src="public/ALIADOS/RAFAY.png" alt="">
+        </div>
+        <div class="container">
+            <img src="public/ALIADOS/ONEID.png" alt="">
+        </div>
+        <div class="container">
+            <img src="public/ALIADOS/REC.png" alt="">
+        </div>
+        <div class="container">
+            <img src="public/ALIADOS/SUPERMETAN.png" alt="">
+        </div>
+        <div class="container">
+            <img src="public/ALIADOS/WISON.png" alt="">
         </div>
 </section>
 
