--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,51 +43,198 @@ import CardService from "../components/CardService.astro";
     </section>
 
     <section id="Servicios">
-      <h2 class="text-center">Servicios realizados por la empresa</h2>
+      <h2 class="text-center">Servicios ofrecidos por la empresa</h2>
 
-	  <div class="container">
-		<CardService
-        date=""
-        img="https://picsum.photos/200"
-        parraf="hola"
-        height={350}
-        width={320}
-        title="hola"
-      />
-	  </div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <div class="container">
+        <CardService
+          date=""
+          img="public/serv/servicios (10).png"
+          parraf=""
+          height={350}
+          width={320}
+          title="Tendido y Empalme de fibra optica"
+        />
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="container">
+        <CardService
+          date=""
+          img="public/serv/servicios (12).png"
+          parraf=""
+          height={350}
+          width={320}
+          title="Calibraciones de instrumentos y pruebas de lazo"
+        />
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="container">
+        <CardService
+          date=""
+          img="public/serv/servicios (5).png"
+          parraf=""
+          height={350}
+          width={320}
+          title="Servicio de mantenimientos de valvulas de control y seguridad"
+        />
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <div class="container">
+        <CardService
+          date=""
+          img="public/serv/servicios (4).png"
+          parraf=""
+          height={350}
+          width={320}
+          title="Mantenimiento de motores electricos y bombas sumergibles"
+        />
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="container">
+        <CardService
+          date=""
+          img="public/serv/servicios (11).png"
+          parraf=""
+          height={350}
+          width={320}
+          title="Mantenimiento de transformadores y subestaciones electricas"
+        />
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="container">
+        <CardService
+          date=""
+          img="public/serv/servicios (6).png"
+          parraf=""
+          height={350}
+          width={320}
+          title="Soldaduras Especiales y Trabajos de soldadura en tuberias"
+        />
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <div class="container">
+        <CardService
+          date=""
+          img="public/serv/servicios (7).png"
+          parraf=""
+          height={350}
+          width={320}
+          title="Construccion de obras civiles y mecanicas"
+        />
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="container">
+        <CardService
+          date=""
+          img="public/serv/servicios (9).png"
+          parraf=""
+          height={350}
+          width={320}
+          title="Mantenimiento preventivo y correctivo de equipos"
+        />
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="container">
+        <CardService
+          date=""
+          img="public/serv/servicios (8).png"
+          parraf=""
+          height={350}
+          width={320}
+          title="Proyectos, Diseño y realizacion de trabajos electricos en alta y baja tension"
+        />
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+
+    </div>
+    <div class="col-sm">
+      <div class="container">
+        <CardService
+          date=""
+          img="public/serv/servicios (13).png"
+          parraf=""
+          height={350}
+          width={320}
+          title="Calibracion y valvulas de seguridad"
+        />
+      </div>
+    </div>
+    <div class="col-sm">
+      
+    </div>
+  </div>
+</div>
+
+     
+
+     
+
+      
+
+      
+
+      
+
+      
+
+      
+
+      
+      
+      
       
     </section>
 
     <section id="Projects">
       <h2 class="text-center">Proyectos realizados por la empresa</h2>
 
-	  <div class="container">
-		<CardService
-        date=""
-        img="https://picsum.photos/200"
-        parraf="hola"
-        height={350}
-        width={320}
-        title="hola"
-      />
-	  </div>
-      
+      <div class="container">
+        <CardService
+          date=""
+          img="https://picsum.photos/200"
+          parraf=""
+          height={350}
+          width={320}
+          title=""
+        />
+      </div>
     </section>
 
     <section id="organization">
       <h2 class="text-center">Equipos de La Empresa</h2>
-	  <div class="container">
-		<CardEM 
-		title="hola" 
-		Data="sisas" 
-		img="https://picsum.photos/200" 
-		/>
-	  </div>
-
+      <div class="container">
+        <CardEM title="" Data="sisas" img="https://picsum.photos/200" />
+      </div>
     </section>
 
     <Organ />
-
+    <br />
     <section id=" aliadoscomerciales">
       <Aliadosc />
     </section>
@@ -99,6 +246,5 @@ import CardService from "../components/CardService.astro";
     </main>
 
     <Footer />
-
   </body>
 </html>
