--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -6,34 +6,43 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="https://picsum.photos/200" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+        <img src="public/MEDICION.jpeg" class="d-block w-100" alt="...">
+        <div class="filter carousel-caption d-none d-md-block">
+          <h3>Misión</h3>
+          <h4>Ser una organización de servicio al cliente, basada en tecnología 
+            y en costos competitivos que exceda continuamente las 
+            expectativas de sus clientes y sus miembros.</h4>
         </div>
       </div>
+
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="https://picsum.photos/200" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+        <img src="public/instrumentacion-industrial-medicion-control.gif" class="d-block w-100" alt="...">
+        <div class="filter carousel-caption d-none d-md-block">
+          <h3>Visión</h3>
+          <h4>Contar con personal de la mejor calidad para cumplir nuestras 
+            metas con eficiencia y efectividad, brindando un servicio 
+            profesional del más alto nivel para clientes exigentes.</h4>
         </div>
       </div>
+
       <div class="carousel-item">
-        <img src="https://picsum.photos/200" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+        <img src="public/LLAVESMEC.webp" class="d-block w-100" alt="...">
+        <div class="filter carousel-caption d-none d-md-block">
+          <h3>Objetivo</h3>
+          <h4>Suministrar a nuestros clientes el apoyo y la asesoría técnica 
+            especializada en la ejecución De proyectos de índole</h4>
         </div>
       </div>
+
     </div>
+
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
+      <span class="visually-hidden">Anterior</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
+      <span class="visually-hidden">Siguiente</span>
     </button>
   </div>
 
@@ -45,5 +54,8 @@
     }
     p, h5{
         color: beige;
+    }
+    .filter{
+      background-color: (128,128,128,0.5);
     }
   </style>
