--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,60 +4,57 @@ import 'bootstrap/dist/css/bootstrap.css'
 ---
 
 <Layout
-	title="About Me"
-	description="Lorem ipsum dolor sit amet"
-	pubDate={new Date('August 08 2021')}
-	heroImage="/blog-placeholder-about.jpg"
+	title="Acerca de Prestaservis RL"
+	description="sisa"
+	pubDate={new Date('Marzo 29 2024')}
+	heroImage="/public/servicios (1).png"
 >
+<h2>
+	¿Quienes Somos?
+</h2>
+	<p><br>
+		<em>
+			<strong>
+				Somos una empresa nacional comprometida con la excelencia en la ejecución de proyectos de construcciones civiles, mecánicas, eléctricas e instrumentación. Desde nuestra fundación, nos hemos dedicado a brindar servicios de alta calidad respaldados por normas nacionales e internacionales.
+			</strong>
+		</em>
+	</p>
+	<h2>
+		Misión
+	</h2>
 	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-		labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo
-		viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam
-		adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus
-		et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus
-		vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque
-		sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
+		Nuestra misión en Prestaservis es prestar servicios a la industria en obras civiles, mecánicas, eléctricas e instrumentación, cumpliendo con nuestro principal objetivo: obtener la satisfacción de los clientes a través de la prestación de un servicio de calidad, confiabilidad y eficiencia.
+	</p>
+	<h2>
+		Visión
+	</h2>
+	<p>
+		Nos esforzamos por ser la empresa de construcciones más confiable para nuestros clientes, alcanzando siempre la máxima rentabilidad y basándonos en la calidad del servicio que ofrecemos. Buscamos ser reconocidos como una de las empresas principales del ramo y alcanzar el reconocimiento internacional como líderes en el izaje de equipo pesado.
+	</p>
+	<h2>
+		Valores de la Empresa
+	</h2>
+	<br>
+	<p>
+		En Prestaservis, nos regimos por los siguientes valores fundamentales:
+<br><br>
+<strong>Excelencia:</strong> Nos esforzamos por alcanzar la excelencia en cada proyecto, cumpliendo con los más altos estándares de calidad y seguridad.
+<br>
+<strong>Integridad:</strong> Actuamos con integridad en todas nuestras operaciones, manteniendo la transparencia y la honestidad en todas nuestras relaciones comerciales.
+<br>
+<strong>Innovación:</strong> Buscamos constantemente nuevas formas de mejorar y optimizar nuestros servicios, adoptando tecnologías y prácticas innovadoras.
+<br>
+<strong>Compromiso:</strong> Estamos comprometidos con la satisfacción de nuestros clientes, cumpliendo con sus expectativas y superando sus necesidades.
 	</p>
 
-	<p>
-		Morbi tristique senectus et netus. Id semper risus in hendrerit gravida rutrum quisque non
-		tellus. Habitasse platea dictumst quisque sagittis purus sit amet. Tellus molestie nunc non
-		blandit massa. Cursus vitae congue mauris rhoncus. Accumsan tortor posuere ac ut. Fringilla urna
-		porttitor rhoncus dolor. Elit ullamcorper dignissim cras tincidunt lobortis. In cursus turpis
-		massa tincidunt dui ut ornare lectus. Integer feugiat scelerisque varius morbi enim nunc.
-		Bibendum neque egestas congue quisque egestas diam. Cras ornare arcu dui vivamus arcu felis
-		bibendum. Dignissim suspendisse in est ante in nibh mauris. Sed tempus urna et pharetra pharetra
-		massa massa ultricies mi.
-	</p>
+	
 
-	<p>
-		Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque. Diam sit amet nisl
-		suscipit. Lacus viverra vitae congue eu consequat ac felis donec. Egestas integer eget aliquet
-		nibh praesent tristique magna sit amet. Eget magna fermentum iaculis eu non diam. In vitae
-		turpis massa sed elementum. Tristique et egestas quis ipsum suspendisse ultrices. Eget lorem
-		dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed viverra. Posuere ac ut consequat
-		semper viverra nam. Laoreet suspendisse interdum consectetur libero id faucibus. Diam phasellus
-		vestibulum lorem sed risus ultricies tristique. Rhoncus dolor purus non enim praesent elementum
-		facilisis. Ultrices tincidunt arcu non sodales neque. Tempus egestas sed sed risus pretium quam
-		vulputate. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Fringilla
-		urna porttitor rhoncus dolor purus non. Amet dictum sit amet justo donec enim.
-	</p>
-
-	<p>
-		Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere ac ut consequat semper
-		viverra. Tellus mauris a diam maecenas sed enim ut sem viverra. Venenatis urna cursus eget nunc
-		scelerisque viverra mauris in. Arcu ac tortor dignissim convallis aenean et tortor at. Curabitur
-		gravida arcu ac tortor dignissim convallis aenean et tortor. Egestas tellus rutrum tellus
-		pellentesque eu. Fusce ut placerat orci nulla pellentesque dignissim enim sit amet. Ut enim
-		blandit volutpat maecenas volutpat blandit aliquam etiam. Id donec ultrices tincidunt arcu. Id
-		cursus metus aliquam eleifend mi.
-	</p>
-
-	<p>
-		Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus imperdiet. Id porta
-		nibh venenatis cras sed felis eget velit. Ipsum a arcu cursus vitae. Facilisis magna etiam
-		tempor orci eu lobortis elementum. Tincidunt dui ut ornare lectus sit. Quisque non tellus orci
-		ac. Blandit libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed pulvinar
-		proin gravida. Egestas integer eget aliquet nibh praesent tristique magna.
+	<p class="text-center">
+	<em><strong>Contamos con un equipo altamente capacitado en áreas clave como aseguramiento de la calidad, 
+		seguridad industrial, producción en serie, servicios al cliente, planificación y control, y logística. 
+		Nuestra experiencia nos permite abarcar todas las etapas de ejecución de proyectos,  
+		desde la planificación hasta la entrega final.</strong>
+		
+	</em>
 	</p>
 </Layout>
