--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,41 +44,32 @@ import CardService from "../components/CardService.astro";
 
     <section id="Servicios">
       <h2 class="text-center">Servicios ofrecidos por la empresa</h2>
-
+br
 <div class="container">
   <div class="row">
     <div class="col-sm">
       <div class="container">
-        <CardService
-          date=""
+        <Card
           img="public/serv/servicios (10).png"
-          parraf=""
-          height={350}
-          width={320}
+          Data=""
           title="Tendido y Empalme de fibra optica"
         />
       </div>
     </div>
     <div class="col-sm">
       <div class="container">
-        <CardService
-          date=""
+        <Card
           img="public/serv/servicios (12).png"
-          parraf=""
-          height={350}
-          width={320}
+          Data=""
           title="Calibraciones de instrumentos y pruebas de lazo"
         />
       </div>
     </div>
     <div class="col-sm">
       <div class="container">
-        <CardService
-          date=""
+        <Card
           img="public/serv/servicios (5).png"
-          parraf=""
-          height={350}
-          width={320}
+          Data=""
           title="Servicio de mantenimientos de valvulas de control y seguridad"
         />
       </div>
@@ -90,36 +81,27 @@ import CardService from "../components/CardService.astro";
   <div class="row">
     <div class="col-sm">
       <div class="container">
-        <CardService
-          date=""
+        <Card
           img="public/serv/servicios (4).png"
-          parraf=""
-          height={350}
-          width={320}
+          Data=""
           title="Mantenimiento de motores electricos y bombas sumergibles"
         />
       </div>
     </div>
     <div class="col-sm">
       <div class="container">
-        <CardService
-          date=""
+        <Card
           img="public/serv/servicios (11).png"
-          parraf=""
-          height={350}
-          width={320}
+          Data=""
           title="Mantenimiento de transformadores y subestaciones electricas"
         />
       </div>
     </div>
     <div class="col-sm">
       <div class="container">
-        <CardService
-          date=""
+        <Card
           img="public/serv/servicios (6).png"
-          parraf=""
-          height={350}
-          width={320}
+          Data=""
           title="Soldaduras Especiales y Trabajos de soldadura en tuberias"
         />
       </div>
@@ -131,36 +113,28 @@ import CardService from "../components/CardService.astro";
   <div class="row">
     <div class="col-sm">
       <div class="container">
-        <CardService
-          date=""
+        <Card
           img="public/serv/servicios (7).png"
-          parraf=""
-          height={350}
-          width={320}
+          Data=""
           title="Construccion de obras civiles y mecanicas"
         />
       </div>
     </div>
     <div class="col-sm">
       <div class="container">
-        <CardService
-          date=""
+        <Card
           img="public/serv/servicios (9).png"
-          parraf=""
-          height={350}
-          width={320}
+          Data=""
           title="Mantenimiento preventivo y correctivo de equipos"
         />
       </div>
     </div>
     <div class="col-sm">
       <div class="container">
-        <CardService
-          date=""
+        <Card
+
           img="public/serv/servicios (8).png"
-          parraf=""
-          height={350}
-          width={320}
+          Data=""
           title="Proyectos, Diseño y realizacion de trabajos electricos en alta y baja tension"
         />
       </div>
@@ -175,12 +149,9 @@ import CardService from "../components/CardService.astro";
     </div>
     <div class="col-sm">
       <div class="container">
-        <CardService
-          date=""
+        <Card
           img="public/serv/servicios (13).png"
-          parraf=""
-          height={350}
-          width={320}
+          Data=""
           title="Calibracion y valvulas de seguridad"
         />
       </div>
