--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -14,8 +14,8 @@ const { Data, title, img } = Astro.props;
         <img src={img} alt=""/>
     </div>
     <div>
-        <h4>{title}</h4>
-        <p>{Data}</p>
+        <h4 class="text-center">{title}</h4>
+        <p class="text-center">{Data}</p>
     </div>
 </div>
 
