--- a/src/components/ContactCards.astro
+++ b/src/components/ContactCards.astro
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container-fluid">
     <div class="row">
 
-        <div class="col-md-4">
+        <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card">
                 <h5 class="card-header">Departamento de Contrataciones</h5>
                 <div class="card-body">
@@ -11,8 +11,8 @@
                 </div>
               </div>
         </div>
-        <div class="col-md-4">
-            <div class="card">
+        <div class="col-lg-4  col-md-6 col-sm-12">
+            <div class="card card2">
                 <h5 class="card-header">Departamento de Calidad</h5>
                 <div class="card-body">
                   <h5 class="card-title">Contactate directamente con nuestro equipo acargo del departamento de calidad</h5>
@@ -20,8 +20,8 @@
                   <a href="mailto:elcorreoquequieres@correo.com?Subject=Aquí%20el%20asunto%20del%20mail" class="btn btn-primary">Click aqui para contactar con nosotros</a>
                 </div>
               </div>
-        </div>
-        <div class="col-md-4">
+        </div> 
+        <div class="col-lg-4  col-md-6 col-sm-12">
             <div class="card">
                 <h5 class="card-header">Gerencia</h5>
                 <div class="card-body">
@@ -31,5 +31,20 @@
                 </div>
               </div>
         </div>
+        
     </div>
 </div>
+
+<style>
+  .row{
+    position: relative;
+   
+    width: 200%;
+    margin-left: -50%;
+  }
+  .card{
+    width: 350px;
+    border-radius: 25px;
+    
+  }
+</style>
