--- a/src/components/aliadosc.astro
+++ b/src/components/aliadosc.astro
@@ -4,60 +4,127 @@
     <h2 class="text-center">Referencias y Aliados Comerciales de Nuestra Organización</h2>
     <br>
     <div class="contenedor-principal">
-        <div class="container">
-            <img src="public/ALIADOS/INDUNORCA.png" alt="">
-        </div>
-        <div class="container">
-            <img src="public/ALIADOS/ICM.png" alt="">
-        </div>
-        <div class="container">
-            <img src="public/ALIADOS/GLOBAL.png" alt="">
-        </div>
 
-        <div class="container">
-            <img src="public/ALIADOS/CETEL.png" alt="">
+        <div class="row contenedor-items">
+                <div class="col-md-3">
+                    <div class="container">
+                        <img src="public/ALIADOS/INDUNORCA.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="container">
+                        <img src="public/ALIADOS/ICM.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="container">
+                        <img src="public/ALIADOS/GLOBAL.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="container">
+                        <img src="public/ALIADOS/CETEL.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="container">
+                        <img src="public/ALIADOS/INELECTRA.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="container">
+                        <img src="public/ALIADOS/INSERVEN.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="container">
+                        <img src="public/ALIADOS/METOR.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="container">
+                        <img src="public/ALIADOS/MMO.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="container">
+                        <img src="public/ALIADOS/RAFAY.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="container">
+                        <img src="public/ALIADOS/ONEID.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="container">
+                        <img src="public/ALIADOS/REC.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="container">
+                        <img src="public/ALIADOS/SUPERMETAN.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="container">
+                        <img src="public/ALIADOS/WISON.png" alt="">
+                    </div>
+                </div>
         </div>
-        <div class="container">
-            <img src="public/ALIADOS/INELECTRA.png" alt="">
-        </div>
-        <div class="container">
-            <img src="public/ALIADOS/INSERVEN.png" alt="">
-        </div>
-        <div class="container">
-            <img src="public/ALIADOS/METOR.png" alt="">
-        </div>
-        <div class="container">
-            <img src="public/ALIADOS/MMO.png" alt="">
-        </div>
-        <div class="container">
-            <img src="public/ALIADOS/RAFAY.png" alt="">
-        </div>
-        <div class="container">
-            <img src="public/ALIADOS/ONEID.png" alt="">
-        </div>
-        <div class="container">
-            <img src="public/ALIADOS/REC.png" alt="">
-        </div>
-        <div class="container">
-            <img src="public/ALIADOS/SUPERMETAN.png" alt="">
-        </div>
-        <div class="container">
-            <img src="public/ALIADOS/WISON.png" alt="">
-        </div>
+      
+        
+      
+
+      
+      
+       
+       
+     
+      
+       
+      
+      
+        
 </section>
 
 
 <style>
+    .contenedor-items{
+      
+        
+        margin: 0px;
+        width: 100%;
+        justify-items: center ;
+        display: flex;
+        align-items: center;
+        padding: 25px;
+        text-align:center;
+       
+    }
+    img{
+        transition: all 0.8s;
+    }
+    img:hover{
+        transform: translateY(-15px);
+        transform: scale(1.2);
+        box-shadow: 0 15px 30px rgba(0,0,0,.1);
+       
+    }
     .contenedor-principal{
         height: 25dvh;
         background-color: #ffff;
-        display: flex;
-        flex-direction: row;
-        flex-basis: content;
+       
     }
     img{
-        margin-right: 10px;
-        height: 200px;
-        width: 200px;
+        padding-top: 10px;
+        width: 150px;
+        height: 100px;
+        margin: 0 auto;
+        margin: 0px;
+    }
+    section{
+        border-bottom: 2px solid rgb(0, 0, 0);
+        padding-bottom: 200px;
     }
 </style>
