--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/BlogPost.astro';
 import 'bootstrap/dist/css/bootstrap.css'
+import Contenido from '../components/Contenido.astro';
 ---
 
 <Layout
@@ -38,7 +39,7 @@ import 'bootstrap/dist/css/bootstrap.css'
 	<p>
 		En Prestaservis, nos regimos por los siguientes valores fundamentales:
 <br><br>
-<strong>Excelencia:</strong> Nos esforzamos por alcanzar la excelencia en cada proyecto, cumpliendo con los más altos estándares de calidad y seguridad.
+<strong >Excelencia:</strong> Nos esforzamos por alcanzar la excelencia en cada proyecto, cumpliendo con los más altos estándares de calidad y seguridad.
 <br>
 <strong>Integridad:</strong> Actuamos con integridad en todas nuestras operaciones, manteniendo la transparencia y la honestidad en todas nuestras relaciones comerciales.
 <br>
@@ -57,4 +58,6 @@ import 'bootstrap/dist/css/bootstrap.css'
 		
 	</em>
 	</p>
+	
 </Layout>
+<Contenido/>
