--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -6,31 +6,40 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="public/MEDICION.jpeg" class="d-block w-100" alt="...">
+        
+        <img src="https://es.silverinstruments.com/uploads/image/20171218/18/gas-turbine-flow-meter.jpg" class="d-block w-100" alt="...">
         <div class="filter carousel-caption d-none d-md-block">
-          <h3>Misión</h3>
-          <h4>Ser una organización de servicio al cliente, basada en tecnología 
-            y en costos competitivos que exceda continuamente las 
-            expectativas de sus clientes y sus miembros.</h4>
+          <div class="contenedor-texto">
+            <h3>Misión</h3>
+            <h4>Ser una organización de servicio al cliente, basada en tecnología 
+              y en costos competitivos que exceda continuamente las 
+              expectativas de sus clientes y sus miembros.</h4>
+          </div>
         </div>
       </div>
 
       <div class="carousel-item" data-bs-interval="2000">
+       
         <img src="public/instrumentacion-industrial-medicion-control.gif" class="d-block w-100" alt="...">
         <div class="filter carousel-caption d-none d-md-block">
-          <h3>Visión</h3>
-          <h4>Contar con personal de la mejor calidad para cumplir nuestras 
-            metas con eficiencia y efectividad, brindando un servicio 
-            profesional del más alto nivel para clientes exigentes.</h4>
+          <div class="contenedor-texto">
+            <h3>Visión</h3>
+            <h4>Contar con personal de la mejor calidad para cumplir nuestras 
+              metas con eficiencia y efectividad, brindando un servicio 
+              profesional del más alto nivel para clientes exigentes.</h4>
+          </div>
         </div>
       </div>
 
       <div class="carousel-item">
+       
         <img src="public/LLAVESMEC.webp" class="d-block w-100" alt="...">
         <div class="filter carousel-caption d-none d-md-block">
-          <h3>Objetivo</h3>
-          <h4>Suministrar a nuestros clientes el apoyo y la asesoría técnica 
-            especializada en la ejecución De proyectos de índole</h4>
+          <div class="contenedor-texto">
+            <h3>Objetivo</h3>
+            <h4>Suministrar a nuestros clientes el apoyo y la asesoría técnica 
+              especializada en la ejecución De proyectos de índole</h4>
+          </div>
         </div>
       </div>
 
@@ -55,7 +64,24 @@
     p, h5{
         color: beige;
     }
-    .filter{
-      background-color: (128,128,128,0.5);
+    *{
+      color: white;
+    }
+   
+    .contenedor-texto{
+      z-index: 99;
+      width: 100%;
+      height: 100%;
+    
+    }
+   .filter{
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
+    border: 4px solid transparent;
+    outline: 4px solid white;
+   }
+   
+    h3,h4{
+      text-align: center;
     }
   </style>
